--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
 									<li><a href="starwarsgalaxysedge.html">star<b>wars</b>galaxy's<b>edge</b></a></li>
 									<li><a href="legouniverse.html">lego<b>universe</b></a></li>
 									<li><a href="jumpgateevolution.html">jumpgate<b>evolution</b></a></li>
-									<li><a href="visualeffects.html">visual<b>effects</b></a></li>
 									<li><a href="rallysoftware.html">rally<b>software</b></a></li>
 									<li><a href="traditionalart.html">traditional<b>art</b></a></li>
-									<li><a href="freelancework.html">freelance<b>work</b></a></li>
+									<li><a href="freelanceandfx.html">freelance<b>/fx</b></a></li>
 									<!--<li>
 										<a href="#">Projects</a>
 										<ul>
@@ -114,13 +113,12 @@
 										<div class="row gtr-33 gtr-uniform">
 <!--										<div class="col-12"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>-->
 <!--										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/Reel_BG.png" alt="" /><p>amazon</p></span></div>-->
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/SWGE_BG.png" alt="" /><p>star<b>wars<br>galaxy's</b>edge</p></span></div>
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/Main_BG.png" alt="" /><p>lego<b>universe</b></p></span></div>
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/About_BG.png" alt="" /><p>jumpgate<br><b>evolution</b></p></span></div>
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/Reel_BG.png" alt="" /><p>visual<b>effects</b></p></span></div>
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/Projects_BG.png" alt="" /><p>rally<b>software</b></p></span></div>
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/Main_BG.png" alt="" /><p>traditional<b>art</b></p></span></div>
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/About_BG.png" alt="" /><p>freelance<b>work</b></p></span></div>
+										<div class="col-4 col-6-small"><span class="image fit"><img src="images/SWGE_BG.png" alt="" /><p>star<b>wars<br>galaxy's</b>edge</p></span></div>
+										<div class="col-4 col-6-small"><span class="image fit"><img src="images/LU_BG.png" alt="" /><p>lego<b>universe</b></p></span></div>
+										<div class="col-4 col-6-small"><span class="image fit"><img src="images/JGE_BG.png" alt="" /><p>jumpgate<br><b>evolution</b></p></span></div>
+										<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/Rally_BG.png" alt="" /><p>rally<b>software</b></p></span></div>
+										<div class="col-4 col-6-small"><span class="image fit"><img src="images/Main_BG.png" alt="" /><p>traditional<b>art</b></p></span></div>
+										<div class="col-4 col-6-small"><span class="image fit"><img src="images/About_BG.png" alt="" /><p>freelance<b>/fx</b></p></span></div>
 									</div>
 									</div>
 							</div>
