--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 									</header>
 								</div>
 								<div class="col-7 col-12-medium">
-									<iframe src="https://player.vimeo.com/video/123284224" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+									<iframe style="width:100%; height:100%" src="https://player.vimeo.com/video/123284224" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 								</div>
 								<!--<div class="col-4 col-12-medium">
 									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
